# Screenshot-Sorter

./: Cargo.toml  Readme.md  TODO.md
src/: anilist.rs  app.rs  main.rs  matching.rs  parse.rs  tui.rs
