[package]
name = "screenshot-sorter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssort"
path = "src/main.rs"

[dependencies]
anitomy    = "0.1"
strsim     = "0.11"
ratatui    = "0.29"
crossterm  = "0.28"
reqwest    = { version = "0.12", features = ["blocking", "json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
regex      = "1"
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
once_cell  = "1"
